# meeting-transcription-tool

./: .env.example  .gitignore  AI_OPTIMIZATION_GUIDE.md  COMPLETE_UPDATE_SUMMARY.md  EXECUTION_FLOW_ANALYSIS.md  EXECUTION_FLOW_DIAGRAM.md  FINAL_IMPLEMENTATION_SUMMARY.md  HUGGINGFACE_SETUP.md  IMPLEMENTATION_STATUS.md  INSTALL_FFMPEG.md  LICENSE  OPTIMIZATION_IMPLEMENTATION.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_SUMMARY.md  PIPELINE_TESTING.md  QUALITY_IMPROVEMENTS_SUMMARY.md  README.md  SETUP_GUIDE.md  TEST_FIX_SUMMARY.md  mkdocs.yml  process_stage2_directory.py  pyproject.toml  pytest.ini  requirements.txt  test_imports.py  view_ai_costs.py
.github/workflows/: ci.yml  publish-docs.yml
docs/: ADR-001-transcription-service-selection.md  SPECIFICATIONS.md  contributing.md  getting-started.md  index.md  pipeline.md  requirements.txt  speaker-identification.md
meeting_transcription_tool/: cli.py  exporters.py  transcriber.py  utils.py
src/meeting_transcription_tool/: ai_logger.py  audio_processor.py  cache_manager.py  cli.py  cli_stages.py  context_extractor.py  diarization.py  exporter.py  pipeline_stages.py  speaker_agent.py  speaker_identifier.py  speaker_quality_analyzer.py  speaker_validator.py  summary_report.py  transcriber.py
tests/: conftest.py  run_tests.py  test_audio_processor.py  test_cli.py  test_diarization.py  test_exporter.py  test_integration.py  test_pipeline.py  test_transcriber.py
